--- a/Swift Fun/Base.lproj/Main.storyboard
+++ b/Swift Fun/Base.lproj/Main.storyboard
@@ -31,18 +31,51 @@
                                     <action selector="ButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ihB-TV-eIH"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uFS-4p-mMi">
+                                <rect key="frame" x="137.5" y="295.5" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="si0-nI-vDB"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hn5-3T-Wng">
+                                <rect key="frame" x="137.5" y="231" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="xBe-hm-rUR"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" layoutMarginsFollowReadableWidth="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UiU-mO-xte">
+                                <rect key="frame" x="163" y="185" width="51" height="31"/>
+                            </switch>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="kRo-ov-Vyz" firstAttribute="top" secondItem="rlU-27-ADw" secondAttribute="bottom" constant="10" id="0vm-UZ-nui"/>
                             <constraint firstItem="rlU-27-ADw" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="81J-NS-rwS"/>
+                            <constraint firstItem="Hn5-3T-Wng" firstAttribute="top" secondItem="UiU-mO-xte" secondAttribute="bottom" constant="15" id="CIX-8f-ix9"/>
+                            <constraint firstItem="rlU-27-ADw" firstAttribute="firstBaseline" secondItem="uFS-4p-mMi" secondAttribute="baseline" constant="24.5" symbolType="layoutAnchor" id="Diu-sp-Heo"/>
                             <constraint firstItem="rlU-27-ADw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="L1M-Jv-0Cb"/>
+                            <constraint firstItem="uFS-4p-mMi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ph5-rL-Sca"/>
+                            <constraint firstItem="Hn5-3T-Wng" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Sep-bs-93U"/>
+                            <constraint firstItem="uFS-4p-mMi" firstAttribute="top" secondItem="Hn5-3T-Wng" secondAttribute="bottom" constant="34.5" id="UdY-mQ-HjR"/>
+                            <constraint firstItem="Hn5-3T-Wng" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eAq-XI-xx3"/>
+                            <constraint firstItem="uFS-4p-mMi" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hr6-de-xY3"/>
+                            <constraint firstItem="uFS-4p-mMi" firstAttribute="centerX" secondItem="Hn5-3T-Wng" secondAttribute="centerX" id="kMc-BK-BBX"/>
                             <constraint firstItem="kRo-ov-Vyz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="m0c-fA-1ak"/>
+                            <constraint firstItem="UiU-mO-xte" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="s6U-4k-oPM"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="BottomTextField" destination="uFS-4p-mMi" id="TKY-LA-jy2"/>
                         <outlet property="MyLabel" destination="rlU-27-ADw" id="1Mt-eT-neJ"/>
+                        <outlet property="Toptextfield" destination="Hn5-3T-Wng" id="37Y-cD-Zs0"/>
+                        <outlet property="additionSwitch" destination="UiU-mO-xte" id="cwV-XA-X0H"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
